# PyFanta

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  LICENSE.md  README.md  api.py  app.py  main_page.py  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
frontend/: __init__.py  constants.py  streamlit_helpers.py  utils.py
pages/: check_player_stats.py  check_team_stats.py
routers/: __init__.py  get_player_links.py
src/: __init__.py  client.py  get_player_historical_stats.py  main.py  main_constants.py  rotating_proxies.py  scraping.py  streamlit_helpers.py
src/api/: __init__.py  endpoints.py  exceptions.py  main.py  models.py
src/api/routers/: links_router.py  matches_router.py  players_router.py
src/scraper/: __init__.py  beautiful_soup_base_scraping_class.py  constants.py  exceptions.py  get_historical_values.py  get_matches_stats.py  get_player_links.py  get_players_historical_stats.py  get_players_links.py  get_players_seasonal_attributes.py  get_players_stats.py  scraper.py  scraper_all.py  utils.py
src/utils/: get_players_data.py  utils.py
tests/: test_beautiful_soup_base_scraping_class.py  test_get_matches_stats.py  test_get_players_link.py  test_placeholder.py
