[project]
name = "PyFanta"
version = "0.2.1"
authors = [
    {name = "baldogiovine"}
]
readme = "README.md"
description = "<An API to scrape Fantacalcio data.>"
requires-python = ">=3.9"
dependencies = [

]


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff]
line-length = 88

target-version = "py39"
extend-exclude = ["data", "experimental", "deprecated"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
extend-select = [
    "B", "Q", "I",
    "D",   # pydocstyle
    "PL"   # pylint
]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
mypy_path = ["stubs"]
incremental = true
strict = true
python_version = "3.9"
exclude = [
    "tests/",
    "docs/",
]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true


[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true


# Enable automatic installation of missing type stubs
install_types = true
non_interactive = true

[tool.coverage.run]
omit = [

]

# [project.scripts]
# app_name = "app_name.main:app"


[project.urls]
homepage = "https://github.com/baldogiovine/PyFanta"
documentation = "<DOCS URL HERE>"
source = "baldogiovine/PyFanta"
